--- a/G4101_lab08_estadistica_pruebas2.qmd
+++ b/G4101_lab08_estadistica_pruebas2.qmd
@@ -105,6 +105,8 @@ bartlett.test(values ~ ind, data = Stacked) %>%
 var.igual = T
 ```
 
+Si las varianzas son diferentes la prueba se llama ANOVA de Welch, si son iguales se llama simplemente ANOVA.
+
 ## Prueba
 
 ```{r}
