--- a/G4101_lab07_estadistica_pruebas1.qmd
+++ b/G4101_lab07_estadistica_pruebas1.qmd
@@ -372,7 +372,7 @@ d2.z %>%
   as_tibble_row()
 ```
 
-#### $d$ de Cohen, media de desvaiciones estandar controlando por correlacion
+#### $d$ de Cohen, media de desviaciones estandar controlando por correlacion
 
 ```{r}
 # MOTE
