--- a/G4101_lab10_estadistica_direccional.qmd
+++ b/G4101_lab10_estadistica_direccional.qmd
@@ -89,9 +89,9 @@ meantrue = ifelse(d == 0, meantrue/2, meantrue)
 
 ## Otras estadisticas
 
--   R: resultante media
+-   $\bar{R}$: resultante media
 -   $s_0$: varianza circular
--   k: parametro de concentracion
+-   $k$: parametro de concentracion
 
 ```{r}
 (R = sqrt(x^2+y^2)/length(theta)) # resultante media
@@ -158,6 +158,11 @@ thetaallrad = rads(thetaall)
 (f = ifelse(kt > 10, 
            ((length(thetaall) - 2)*(R1+R2-Rt))/(length(thetaall)-R1-R2),
            (1+3/(8*kt))*((length(thetaall)-2)*(R1+R2-Rt))/(length(thetaall)-R1-R2)))
-(fcrit = qf(1-a,1,length(thetaall)-2))
+
+v1 = 1
+v2 = length(thetaall)-2
+
+(fcrit = qf(1-a,v1,v2))
 f > fcrit
+pf(f,v1,v2,lower.tail = F)
 ```
