--- a/G4101_lab11_secuencias.qmd
+++ b/G4101_lab11_secuencias.qmd
@@ -246,18 +246,7 @@ ggstatsplot::ggcoefstats(fit3,exclude.intercept = T)
 
 Determina si hay ciclos, patrones, tendencia, sobre una serie de datos ordenados, preferiblemente equidistantemente, en el espacio/tiempo.
 
-## Como remover una tendencia de una serie de datos
-
-Pasos:
-
-1.  Determinar si hay una tendencia
-
-    a.  Construir modelo lineal
-    b.  Determinar si la pendiente es significativa
-
-2.  Si hay tendencia, calcular los residuos
-
-### Visualizar los datos
+## Visualizar los datos
 
 ```{r ts-data}
 AirPassengers
@@ -282,28 +271,47 @@ DF %>%
                    .interactive = F) # estatico o interactivo
 ```
 
+## Como remover una tendencia de una serie de datos
+
+Pasos:
+
+1.  Determinar si hay una tendencia
+
+    a. Visualizar los datos 
+    b. Construir modelo lineal
+    c. Determinar si la pendiente es significativa
+
+2.  Si hay tendencia, calcular los residuos
+
+### Visualizar datos
+
 ```{r ts-plot}
 ggplot(DF, aes(index,value)) +
   geom_line() +
   geom_smooth(method = 'lm')
 ```
 
-### Modelo
+### Modelo y residuos
 
 ```{r ts-mod}
 mod = lm(value ~ index, data = DF)
 
-model_parameters(mod) # resumen del modelo
+model_parameters(mod, digits=3, ci_digits=3) # resumen del modelo
 model_performance(mod) # ajuste del modelo
 
 DF2 = augment(mod)  # data frame incluyendo residuales 
 ```
+
+### Visualizar residuales
 
 ```{r ts-resid}
 ggplot(DF2, aes(index,.resid)) +
   geom_line() + 
   geom_hline(yintercept = 0, col = 2)
 ```
+
+
+## Grafico de autocorrelacion
 
 ### Sin remover tendencia
 
@@ -328,35 +336,80 @@ DF2 %>% plot_acf_diagnostics(index,.resid,
 ### Objeto dataframe
 
 ```{r acf-diag}
-ac.1 = DF2 %>% tk_acf_diagnostics(index, .resid, .lags = nrow(.)/3)
+n = nrow(DF2)
+lag.max = n/3
+delta = diff(DF2 %>% pull(index))[1]
+
+ac.1 = DF2 %>% tk_acf_diagnostics(index, .resid, .lags = lag.max)
 ac.1
 ```
 
 ```{r acf-test}
 lag.t = ac.1 %>% filter(ACF<0)
 
-(rtau.1 = max(ac.1[which(ac.1$lag==pull(lag.t[1,1])):nrow(ac.1),2])) # valor maximo de autocorrelacion
+rtau.1 = max(ac.1[which(ac.1$lag==pull(lag.t[1,1])):nrow(ac.1),2]) # valor maximo de autocorrelacion
 
-(tau.1 = ac.1$lag[ac.1$ACF==rtau.1]) # lag donde ocurre el valor maximo de autocorrelacion
+tau.1 = ac.1$lag[ac.1$ACF==rtau.1] # lag donde ocurre el valor maximo de autocorrelacion
 
-(z.1 = rtau.1*sqrt(nrow(DF2)-tau.1+3)) # test de significancia de autocorrelacion
+z.1 = rtau.1*sqrt(n-tau.1+3) # test de significancia de autocorrelacion
+
+p.ac = pnorm(-abs(z.1))*2 # valor-p
+
+ac.dist = tau.1 * delta # distancia de autocorrelacion
+
+ac_res = tibble(
+  estimate = rtau.1,
+  lag = tau.1,
+  delta = delta,
+  dist = ac.dist,
+  statistic = z.1,
+  p.value = p.ac
+)
+ac_res
 ```
 
 ### Objeto serie temporal
 
 ```{r}
 DF.ts = zoo::zoo(DF2$.resid,DF2$index)
-DF.ts = lh
+# DF.ts = lh
 
-(n = length(DF.ts))
-(f = frequency(DF.ts))
+n = length(DF.ts)
+lag.max = n/3
+f = frequency(DF.ts)
+delta = deltat(DF.ts)
 
-ac1 = acf(DF.ts,lag.max = length(DF.ts)/3)
+ac1 = acf(DF.ts,lag.max = n/3)
 lagt = ac1$acf[ac1$acf<0]
 
-(rtau1 = max(ac1$acf[which(ac1$acf==lagt[1]):length(ac1$acf)])) # valor maximo de autocorrelacion
+rtau1 = max(ac1$acf[which(ac1$acf==lagt[1]):length(ac1$acf)]) # valor maximo de autocorrelacion
 
-(tau1 = ac1$lag[ac1$acf==rtau1]*f) # lag donde ocurre el valor maximo de autocorrelacion
+tau1 = ac1$lag[ac1$acf==rtau1]*f # lag donde ocurre el valor maximo de autocorrelacion
 
-(z1 = rtau1*sqrt(n-tau1+3)) # test de significancia de autocorrelacion
+z1 = rtau1*sqrt(n-tau1+3) # test de significancia de autocorrelacion
+
+p.ac = pnorm(-abs(z1))*2 # valor-p
+
+ac.dist = tau1 * delta*f # distancia de autocorrelacion
+
+ac_res = tibble(
+  estimate = rtau1,
+  lag = tau1,
+  delta = delta,
+  dist = ac.dist,
+  statistic = z1,
+  p.value = p.ac
+)
+ac_res
 ```
+
+### Modelo
+
+```{r}
+car::durbinWatsonTest(mod,lag.max) %>% 
+  tidy %>% 
+  rownames_to_column('lag') %>% 
+  # filter(autocorrelation > 0) %>% 
+  slice_max(abs(autocorrelation), n = 10)
+```
+
